<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">IRC</string>

    <string name="btn_connect">Start Chatting!</string>
    <string name="btn_disconnect">Disconnect</string>
    <string name="btn_options">Options</string>
    <string name="btn_showwind">Show Window</string>
    
    <string name="welcome">Welcome to AndroidChat!</string>
   
    <string name="ui_getstarted">Type here and press enter to start chatting!</string>
    <string name="ui_newpm">You have a new message!</string>
    <string name="ui_newmsg">There is a new message in channel </string>
    <string name="ui_waiting">Waiting for network connection...</string>
    
    <string name="ui_progress">Updating users' locations...</string>
        
    <string name="irc_started">Chat Service Started</string>
    <string name="irc_connecting">Chat Service Connecting</string>
    <string name="irc_connected">Chat Service Connected</string>
    <string name="irc_error">Chat Service Error</string>
    <string name="irc_disconnected">Chat Service Disconnected</string>
    <string name="irc_stopped">Chat Service Stopped</string>
    
    <string name="opt_hint1">The nickname with which you connect</string>   
    <string name="opt_hint2">Channels to automatically join after connecting, separated by spaces</string>
    <string name="opt_hint3">Show the list of channels after first connecting</string>
    <string name="opt_hint4">Send location updates for this client. (Highly Recommended)</string>
    <string name="opt_hint5">Open Private Messages as they arrive</string>
    <string name="opt_opt3">Channels On Connect</string>
    <string name="opt_opt4">Send Location Updates</string>
    <string name="opt_opt5">PopUp new PMs</string>
    
    <string name="opt_cancel">Cancel</string>
    <string name="opt_save">Save Preferences</string>
    
    <!-- Preferences strings -->
    <string name="pref_general_category">General Settings</string>
    <string name="pref_account_category">Account Settings</string>
    <string name="pref_notification_category">Notification Settings</string>
    
    <string name="irc_autosignin_title">Automatically sign in</string>
    
    <string name="irc_nickname">Nickname</string>
    <string name="irc_nickname_summary">Your IRC Nickname for this client</string>
    
    <string name="irc_password">Password</string>
    <string name="irc_password_summary">Your IRC registered password</string>
    
    <string name="irc_username">Username</string>
    <string name="irc_username_summary">Your IRC client username</string>
    
    <string name="irc_nickalert_title">Nickname Alert</string>
    <string name="irc_nickalert_summary">Alerts when someone says your Nick</string>
    
    <string name="irc_pmalert_title">Private Message Alert</string>
    <string name="irc_pmalert_summary">Alerts when you receive a private message</string>
</resources>
