<?xml version="1.0" encoding="utf-8"?>

<!-- This is the preferences screen for androidchat -->

<PreferenceScreen
	xmlns:android="http://schemas.android.com/apk/res/android">
	
	<PreferenceCategory
		android:title="@string/pref_general_category">
	
		<CheckBoxPreference
			android:key="pref_autosignin_key"
			android:title="@string/irc_autosignin_title"
			android:defaultValue="false"/>
				
	</PreferenceCategory>
	
	<PreferenceCategory
		android:title="@string/pref_account_category">
		
		<EditTextPreference
            android:key="irc_nickname_key"
            android:title="@string/irc_nickname"
            android:summary="@string/irc_nickname_summary"
            android:singleLine="true"
            /> 
            
       <EditTextPreference
            android:key="irc_password_key"
            android:title="@string/irc_password"
            android:summary="@string/irc_password_summary"
            android:singleLine="true"
            android:password="true"
            /> 
            
		<EditTextPreference
            android:key="irc_username_key"
            android:title="@string/irc_username"
            android:summary="@string/irc_username_summary"
            android:singleLine="true"
            android:defaultValue="androidchat"
            /> 
            
	</PreferenceCategory>
	
	<PreferenceCategory
		android:title="@string/pref_notification_category">
		
		<CheckBoxPreference
			android:key="pref_nickalert_key"
			android:title="@string/irc_nickalert_title"
			android:summary="@string/irc_nickalert_summary"
			android:defaultValue="true"/>
			
		<CheckBoxPreference
			android:key="pref_pmalert_key"
			android:title="@string/irc_pmalert_title"
			android:summary="@string/irc_pmalert_summary"
			android:defaultValue="true"/>
			
	</PreferenceCategory>
</PreferenceScreen>
