<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical">

	<ImageView android:id="@+id/img_AndroidChatLogo"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content" 
		android:src="@drawable/icon"
		android:layout_gravity="center_horizontal" 
		android:padding="5sp" />
		
	<TextView android:layout_width="fill_parent"
		android:layout_height="wrap_content" 
		android:text="@string/welcome" 
		android:padding="4sp" />

	<Button android:id="@+id/btn_Connect"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/btn_connect"
		android:layout_gravity="center_horizontal">
		<requestFocus />
	</Button>

	<Button android:id="@+id/btn_ShowOpts"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content" 
		android:text="@string/btn_options"
		android:layout_gravity="center_horizontal" />
	
</LinearLayout>
